<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ghost_white"
        tools:context=".view.fragments.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    fontPath="fonts/outfitsemibold.ttf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tasks_list"
                    android:textColor="@color/gunmetal_blue"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgSortOptions"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_menu"
                    app:tint="@color/black" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/task_title"
                android:textColorHint="@color/slate_gray"
                android:textSize="14sp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/text_input_stroke_color"
                app:boxStrokeWidth="1dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_corner_gray_stroke"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="8dp"
                    android:hint="@string/search_your_note_hint"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="16dp"
                    android:textColor="@color/gunmetal_blue"
                    android:textColorHint="@color/slate_gray"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recTasks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    tools:listitem="@layout/layout_rec_task" />

                <TextView
                    android:id="@+id/tvEmptyTaskList"
                    fontPath="fonts/outfitsemibold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:text="@string/empty_task_list"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressBarLoading"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    app:hideAnimationBehavior="outward"
                    app:indicatorColor="@color/medium_orchid"
                    app:indicatorSize="48dp"
                    app:showAnimationBehavior="inward"
                    app:trackColor="@color/transparent"
                    app:trackThickness="4dp" />

            </FrameLayout>


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="18dp"
            android:backgroundTint="@color/medium_orchid"
            android:rotation="90"
            android:src="@drawable/ic_add"
            android:tint="@color/white"
            app:fabSize="mini"
            app:shapeAppearance="@style/fab_rounded"
            tools:ignore="ContentDescription" />

    </FrameLayout>
</layout>